fix spacing on swal limit and range extra info

--- a/src/components/Swap/ExtraInfo/ExtraInfo.module.css
+++ b/src/components/Swap/ExtraInfo/ExtraInfo.module.css
@@ -1,6 +1,9 @@
 .main_container{
     padding: 0 25px 0 32px;
 }
+.extra_details_container{
+    padding: 8px 0;
+}
 
 .extra_info_content {
     width: 100%;
@@ -18,11 +21,17 @@
     outline: none;
     border: none;
     border-radius: var(--border-radius);
+
+    padding: 0 8px;
+
+
 }
 
 
+.extra_info_content:hover,
 .extra_info_content:focus-visible {
-    background: var(--dark2);
+    border-radius: var(--border-radius);
+    background: var(--dark2) !important;
 }
 
 .extra_info_content_active:focus-visible {
