--- a/src/components/Trade/Limit/LimitButton/LimitButton.module.css
+++ b/src/components/Trade/Limit/LimitButton/LimitButton.module.css
@@ -1,4 +1,4 @@
 .button_container {
-   padding: 5px 36px;
+   padding: 5px 32px;
    
 }
