--- a/src/components/Trade/Limit/LimitExtraInfo/LimitExtraInfo.module.css
+++ b/src/components/Trade/Limit/LimitExtraInfo/LimitExtraInfo.module.css
@@ -1,6 +1,9 @@
 .main_container{
     padding: 0 2rem;
 }
+.extra_details_container{
+    padding: 8px 0;
+}
 .extra_info_content {
     width: 100%;
     display: flex;
@@ -12,18 +15,24 @@
     font-size: var(--body-size);
     line-height: var(--body-lh);
     height: 33px;
-  
-
+    margin-top: 8px;
+    padding: 0 8px;
+    
+    
     background: transparent;
     outline: none;
     border: none;
     border-radius: var(--border-radius);
+    
+
 
 }
 
 
+.extra_info_content:hover,
 .extra_info_content:focus-visible {
-    background: var(--dark2);
+    border-radius: var(--border-radius);
+    background: var(--dark2) !important;
 }
 
 .extra_info_content_active:focus-visible {
@@ -47,7 +56,7 @@
 .extra_details {
     border: 1px solid var(--dark3);
 
-    margin: 5px;
+    margin: 5px 0;
     border-radius: var(--border-radius);
 
     color: var(--text2);
